--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+     <title>328club</title>
+</head>
 <body>
-
-Hello Xiamen!
+	Hello Xiamen!
 捐助本站
 <div>
 	  <img src=./wechat.png>
 </div>
-
-
 </body>
-
+</html>
