update the background image

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <style>
         body {
             width: 100%;
-            background: linear-gradient(90deg, deepskyblue, forestgreen);
+            /*background: linear-gradient(90deg, deepskyblue, forestgreen);*/
+            background-image: url("./assets/background.png");
+            background-size: cover;
         }
 
         .title {
+            display: none;
             font-size: 128px;
             text-align: center;
             background-color: #fff;
@@ -60,7 +63,7 @@
 <div class="footer">本活动由328会所全体成员赞助</div>
 <div class="qrcode">
     <div class="tips">捐助本站</div>
-    <img class="image" src=./wechat.png>
+    <img class="image" src="./assets/wechat.png">
 </div>
 </body>
 </html>
